--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,8 @@
-@import url(./base/_reset.css);
-@import url(./base/_variables.css);
-@import url(./icons.css);
-@import url(./layout/_header.css);
-@import url(./layout/_footer.css);
+@import url('./base/_reset.css');
+@import url('./base/_variables.css');
+@import url('./icons.css');
+@import url('./layout/_header.css');
+@import url('./layout/_footer.css');
 /* ========== Header ========== */
 nav {
   user-select: none;
